[STYLE] Add styles in general, footer, font, color

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,20 +1,22 @@
 footer {
+    /* --- Fijar el footer abajo --- */
+    /*
     position:fixed;
     left:0px;
     bottom:0px;
-    width:100%;
+    */
     /* min-height: 5%;
     max-height: 10%; */
+    width:100%;
     padding-bottom: 3px;
     background-color: #fff;
     box-shadow: 0rem 0rem 0.8rem rgba(50, 50, 50, 0.3);
-    
 }
 
 .hLine{
     height: 1px;
-    background-color: var(--color-wil);
-    width: 90%;
+    background-color: lightgray;
+    width: 100%;
     margin: 0 auto;
 }
 
