--- a/styles/style.css
+++ b/styles/style.css
@@ -1,326 +1,171 @@
 :root{
     --fuente-primary: "Inter", sans-serif;
 
+
     /* color palette */
-    --color-primary:  #010440;
-    --color-secondary: #4586BF;
-    --color-secondary-light: #ADC8D9;
+    --color-primary:  #001733;
+    --color-secondary: #2488ff;
+    --color-secondary-light: #9ac8fe;
     --color-tertiary:  #FFFEFF;
     --color-accent:  #9CE37D;
-    --color-accent-secondary:  #FFFD82;
-    --color-accent-tertiary:  #ED217C;
+    --color-accent-two:  #FFFD82;
+    --color-accent-three:  #ED217C;
+    --color-accent-four:  #15d0e5;
+
     --color-brand-blue: #0072bb;
 }
 
 *{
     margin: 0;
     padding: 0;
-    border: 0;
     box-sizing: border-box;
 }
 
 body{
-    background-color: var(--color-primary);
     font-family: var(--fuente-primary);
-    font-optical-sizing: auto;
-    font-weight: 100;
-    line-height: 1.6rem;
-    font-size: 1.1rem;
-    text-rendering: auto;
-}
-
-hr{
-    margin: 0 auto;
-    width: 90%;
-    border-style: solid;
-    border-width: 1px;
-    border-color: var(--color-accent);
-}
-
-section{
-    margin: 3rem auto;
-    padding: 0.6rem;
-    width: 70%;
-    max-width: 900px;
-}
-
-
-#sVideo{
-    display: flex;
-    justify-content: center;
-}
-
-.nav{
-    display: flex;
-    justify-content: space-around;
-    margin: 0.6rem;
-}
-
-.nav_buttons{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.nav_buttons_button{
-    background-color: var(--color-accent);
-    text-align: center;
-    text-decoration: none;
-    padding: 0.4rem 0.8rem;
-    margin: 0.1rem;
-    border-radius: 0.1rem;
-    font-weight: 600;
-    border: 1px solid var(--color-primary);
     color: var(--color-primary);
-}
-
-.nav_buttons_button:hover{
-    background-color: var(--color-primary);
-    border: 1px solid var(--color-accent);
-    color: var(--color-accent);
-}
-
-.network_link{
-    margin: 0px 0.4rem;
-    padding: 0px;
-    border: 1px solid var(--color-primary);
-    border-radius: 0.25rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.network_link img{
-    height: 2.5rem;
-    filter: invert(73%) sepia(59%) saturate(631%) hue-rotate(14deg) brightness(117%) contrast(92%);
-}
-
-.network_link:hover{
-    border: 1px solid var(--color-accent);
-    background-color: var(--color-accent);
-}
-
-.network_link img:hover{
-    filter: invert(7%) sepia(11%) saturate(306%) hue-rotate(278deg) brightness(98%) contrast(89%)
-}
-
-a, p, span, legend, h2, li{
-    color: var(--color-tertiary);
-    padding: 0.6rem;
-    font-weight: 100;
-    letter-spacing: 1pt;
-}
-
-h1{
-    color: var(--color-tertiary);
-    margin: 2.5rem 2.5rem 2rem;
-    display: flex;
-    justify-content: center;
-}
-
-
-h2{
-    color: var(--color-tertiary);
-    margin: 2.5rem 2.5rem 2rem;
-    display: flex;
-    justify-content: center;
-    text-align: center;
-    line-height: normal;
-}
-
-h3{
-    color: var(--color-tertiary);
-    margin: 2rem 0px 1.3rem;
+    /* background-color: var(--color-primary); */
+    /* font-optical-sizing: auto; */
+    /* text-rendering: auto; */
+    background-image: url("../images/img_bg_abstract.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
 
 }
 
-li{
-    list-style-type: "+";
-}
-
-
-footer {
-    background-color: var(--color-primary);
-    color:  var(--color-tertiary);
-    text-align: center;
-    padding: 0px 0px 1.3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.footer_content{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-top: 0.3rem;
-}
-
-
-#logo_wil{
-    width:2rem;
-    margin-left: 1rem;
-}
-
-#logo_wil_first{
-    width: 6rem;
-}
-
-button{
-    background-color: var(--color-accent);
-    text-decoration: none;
-    padding: 0.2rem;
-}
-
-article{
-    background-color: var(--color-primary);
-}
-
-article p {
-    margin-left: 1.3rem;
-}
-
-iframe{
-    /* margin: 0,6rem auto;
-    padding: 0.2rem; */
-    width: 33rem;
-    height: 19rem;
-    min-width: 18rem;
-    min-height: 8rem;
-}
-
-#btn_top{
-    margin: 0px 0px 3.7rem;
-}
-
-/* logos redes */
-.network_links{
-    display: flex;
-}
-
-.network_links img{
-    height: 3.7rem;
-}
-
-.d_contact{
-    display: block;
-}
-
-/* formulario */
-input[type=text], [type=email],select, textarea {
-    width: 100%;
-    padding: 0.8rem;
-    border-radius: 0.25;
-    margin-top: 3.5rem;
-    margin-bottom: 1rem;
-}
-
-/* project cards */
-.cards{
-    display: flex;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 1.3rem;
-}
-
-.card{
-    padding: 0px;
-    margin: 1rem;
-    text-decoration: none;
-}
-
-.project_card{
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    gap: 1.9rem;
-    align-items: center;
-    border: 1px solid var(--color-secondary);
-    border-bottom: 4px solid var(--color-secondary);
-    border-top: 0.4px solid var(--color-secondary);
-    border-radius: 1rem;
-    padding: 1.3rem;
-    width: 22.5rem;
-    min-width: 16.3rem;
-    
-}
-
-.project_card h3 {
-    height: 3rem;
-}
-
-.project_card:hover{
-    border-bottom: 4px solid var(--color-secondary-light);
-    border-top: 4px solid var(--color-secondary-light);
-}
-
-/* General */
-/* Hacer footer siempre abajo, header siempre arriba */
+/* --- Conservar header arriba y footer abajo ---*/
 .container{
     min-height: 100dvh;
     display: grid;
     grid-template-rows: auto 1fr auto;
 }
 
-.skills_container{
+
+/* Barra de navegación */
+.nav{
     display: flex;
     justify-content: space-around;
-    flex-wrap: wrap;
-    gap: 1.3rem;
+    background-color: var(--color-tertiary);
+    width: 100%;
 }
 
-.skills_content{
-    border: 1px solid var(--color-secondary);
-    border-bottom: 4px solid var(--color-secondary);
-    border-top: 0.4px solid var(--color-secondary);
-    border-radius: 1rem;
-    padding: 1.3rem;
-    width: 23.75rem;
-    min-width: 16.25rem;
+.nav_logo {
+    display: flex;
+}
+
+.nav_logo_img{
+    height: 2.5rem;
+    padding: 0.3rem;
+    margin: 0 0.8rem;
+}
+
+.nav_logo_title{
+    font-size: 1rem;
+    line-height: 1;
+    color: var(--color-primary);
+}
+
+.nav_theme{
+    padding: 0.3rem;
+    margin: 0 0.8rem;
+    color: var(--color-primary);
+}
+
+/* Main*/
+.content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.content_input,
+.content_output{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Texto origen */
+.input_rules,
+.output_rules{
+    font-size: 0.8rem;
+    color: var(--color-tertiary);
+    margin-bottom: 0.5rem;
 
 }
 
-.skills_content:hover{
-    border-bottom: 4px solid var(--color-secondary-light);
-    border-top: 4px solid var(--color-secondary-light);
+.output_rules{
+    color: transparent;
+}
+
+.input_frame,
+.output_frame{
+    width: 85%;
+}
+
+/* Texto resultado */
+.input_text,
+.output_text{
+    width: 100%;
+    height: 55vh;
+    margin-bottom: 1rem;
+    border: 3px solid var(--color-accent-four);
+    border-radius: 10px;
+    font-size: 1.5rem;
+    padding: 0.3rem;
+    box-shadow: 0 0 5px #15d0e5;
+    resize: none;
+    background-color: rgba(255, 254, 255, 0.85);
+}
+
+
+
+.input_text:focus,
+.output_text:focus{
+    box-shadow: 0 0 10px var(--color-accent-four);
+    outline: 1px solid white;
+
+}
+
+/* --- Botones ---*/
+
+.button{
+    padding: 0.6rem 1.2rem;
+    border: 2px solid var(--color-secondary);
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 0.8rem;
+    letter-spacing: 1px;
+    font-weight: 500;
+    width: 8rem;
+    background-color: var(--color-tertiary);
+}
+
+.button:hover {
+    background-color: var(--color-brand-blue); 
+    color: white;
+}
+
+.button:active {
+    background-color: hsl(213, 100%, 27%); 
+}
+
+/* --- Responsive designs --- */
+/* --- Media query pantallas medianas */
+@media screen and (min-width:1280px){
+    
+}
+
+
+/* --- Media query pantallas pequeñas */
+@media screen and (max-width:500px){
+
 }
 
 
 
 
-@media screen and (max-width: 500px) {
-    .nav_buttons_button {
-        padding: 0.2rem 0.4rem;
-        font-size: 0.9rem;
-    }
 
-    section{
-        margin: 2rem auto;
-        padding: 0.6rem;
-        width: 85%;
-        max-width: 900px;
-    }
-
-    h1{
-        font-size: 3rem;
-    }
-
-    h2{
-        font-size: 2rem;
-    }
-
-    h3{
-        font-size: 1rem;
-    }
-
-    /* project cards */
-
-    .project_card{
-        width: 16rem;
-        min-width: 14rem;
-    }
-
-    .project_card h3 {
-        height: 1rem;
-    }
-}
