--- a/styles/style.css
+++ b/styles/style.css
@@ -27,13 +27,15 @@ body{
     /* background-color: var(--color-primary); */
     /* font-optical-sizing: auto; */
     /* text-rendering: auto; */
-    background-image: url("../images/img_bg_abstract.jpeg");
+    /* background-image: url("../images/img_bg_abstract.jpeg"); */
+    background-color: var(--color-tertiary);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
 
 }
+
 
 /* --- Conservar header arriba y footer abajo ---*/
 .container{
@@ -112,13 +114,13 @@ body{
     width: 100%;
     height: 55vh;
     margin-bottom: 1rem;
-    border: 3px solid var(--color-accent-four);
+    border: 1px solid var(--color-accent-four);
     border-radius: 10px;
     font-size: 1.5rem;
     padding: 0.3rem;
     box-shadow: 0 0 5px #15d0e5;
     resize: none;
-    background-color: rgba(255, 254, 255, 0.85);
+    background-color: rgba(255, 254, 255, 1);
 }
 
 .input_text:focus,
@@ -132,23 +134,24 @@ body{
 
 .button{
     padding: 0.6rem 1.2rem;
-    border: 2px solid var(--color-secondary);
+    border: 2px solid var(--color-accent-four);
     border-radius: 5px;
     cursor: pointer;
     font-size: 0.8rem;
     letter-spacing: 1px;
     font-weight: 500;
     width: 8rem;
-    background-color: var(--color-tertiary);
+    background-color: var(--color-primary);
+    color: var(--color-tertiary);
 }
 
 .button:hover {
-    background-color: var(--color-brand-blue); 
+    background-color: hsl(213, 100%, 27%); 
     color: white;
 }
 
 .button:active {
-    background-color: hsl(213, 100%, 27%); 
+    background-color: var(--color-brand-blue); 
 }
 
 /* --- Responsive designs --- */
@@ -184,10 +187,10 @@ body{
     }
 
     .button{
-        margin-bottom: 2rem;
+        margin-bottom: 1rem;
     }
 
-    /* Hacer  */
+    /* Solucionar el brinco que tiene la imagen de fondo cuando se hace scroll  */
 
 }
 
